fixed inconsitancies with top spacing

--- a/wp-content/themes/displayblocksansa/sass/_global.sass
+++ b/wp-content/themes/displayblocksansa/sass/_global.sass
@@ -22,12 +22,23 @@ img
 
 .site-content
   padding: 9.6rem 0 0 0
-  // background: $db-primaryblue
   width: 100%
   +group
+  +breakpoint(medium)
+    padding: 13.4rem 0 0 0
+  +breakpoint(small)
+    padding: 16.2rem 0 0 0
+  +breakpoint(verysmall)
+    padding: 16.2rem 0 0 0
 
 .site-content.compacted
   padding: 7.2rem 0 0 0
+  +breakpoint(medium)
+    padding: 10.8rem 0 0 0
+  +breakpoint(small)
+    padding: 13.4rem 0 0 0
+  +breakpoint(verysmall)
+    padding: 13.4rem 0 0 0
 
 .site-main
   background: white
