--- a/wp-content/themes/displayblocksansa/sass/_header.sass
+++ b/wp-content/themes/displayblocksansa/sass/_header.sass
@@ -31,7 +31,6 @@ body.compact .site-header
     .note
       +screenreader
   +breakpoint(verysmall)
-    padding: 0.5rem 1rem
     .note
       +screenreader
 
@@ -109,7 +108,7 @@ body.compact .pointmark
     position: relative
     max-width: 220px
     +breakpoint(small)
-      max-width: 190px
+      max-width: 150px
     +breakpoint(verysmall)
       max-width: 150px
   a
